--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,9 +1,7 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
 /node_modules
-# Keep environment variables out of version control
-.env
-
-/generated/prisma
-
 /.pnp
 .pnp.js
 
