--- a/backend/package.json
+++ b/backend/package.json
@@ -17,10 +17,14 @@
   "dependencies": {
     "@prisma/client": "^6.18.0",
     "bcryptjs": "^3.0.2",
-    "express": "^5.1.0"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^24.9.2",
     "nodemon": "^3.1.10",
     "prisma": "^6.18.0",
